<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignUp.Startup_Screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/startup_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/startup_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/startup_tag_line"
            android:textAlignment="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="callLoginScreen"
                android:background="@color/rose"
                android:text="@string/login"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/rose"
                android:onClick="callSignupScreen"
                android:text="@string/create_account"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>