<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/lightWhite"
        android:theme="@style/navigationTheme"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_manu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:background="@color/lightWhite"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/logo_name"
                    android:textSize="28sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/app_name"
                    android:background="@color/white"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_text"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/search_icon"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"/>


                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/market_icon" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/market"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_2"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/park_icon" />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/parks"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_3"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/historicalplace_icon"
                            android:layout_centerInParent="true"/>



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/historical_place"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_4"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/hotel_icon"
                            android:layout_centerInParent="true"/>



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/hotels"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/rose">

                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/rose"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/featured_locations"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="26dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/featured_locations_description" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/home_background" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/most_viewed_locations"
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="sans-serif-black"
                        android:textAllCaps="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/most_viewed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="0dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="0dp" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>