<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.SignUp"
    android:background="@color/rose"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_title_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:startIconDrawable="@drawable/field_full_name_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_last_name"
                app:startIconDrawable="@drawable/field_username_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/field_email_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/field_password_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>




            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_create_account_btn"/>

    </LinearLayout>
</ScrollView>