<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.Login"
    android:background="@color/rose"
    android:padding="30dp"
    android:transitionName="transition_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:hint="@string/enter_username"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/field_username_icon"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/field_password_icon"
                app:startIconTint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:buttonTint="@color/black"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <Button
                android:id="@+id/girisyap_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/hesap_olustur_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hesap Oluştur"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>